Fix overflow issue and add the season facts finally

--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -5,18 +5,32 @@
     --font-sans: Inter, sans-serif;
 }
 
-html, body {
+html {
+    width: 100vw;
+    height: 100vh;
     background-color: #171717;
     color: #e7e7e7;
     font-family: var(--font-sans);
-}
-
-* {
     margin: 0;
 }
 
 body {
-    margin-left: 64px
+	margin: 0;
+	padding: 0;
+	margin-left: 64px;
+	min-height: 100%;
+	display: flow-root;
+}
+
+
+* {
+    margin: 0;
+    word-break: break-all;
+}
+
+#app {
+    width: 100%;
+    height: 100%;
 }
 
 h1 {
